# cpp_basics

00_cmake_hello_world/: CMakeLists.txt
00_cmake_hello_world/src/: main.cpp
01_flat_class_declaration_in_separate_files/src/: CMakeLists.txt
02_minimal_class_linked_as_library/src/: CMakeLists.txt
02_minimal_class_linked_as_library/src/example_lib_no_subdirectory/: CMakeLists.txt  main.cpp
02_minimal_class_linked_as_library/src/example_lib_with_subdirectory/: CMakeLists.txt
03_minimal_class_linked_as_library_subdirectories/src/: CMakeLists.txt
03_minimal_class_linked_as_library_subdirectories/src/my_lib/src/: SharedBuffer.cpp
04_minimal_class_linked_as_lib_improved/src/: CMakeLists.txt
04_minimal_class_linked_as_lib_improved/src/my_lib/: CMakeLists.txt
04_minimal_class_linked_as_lib_improved/src/my_lib/include/my_lib/: SharedBuffer.h
05_installing_a_library/: README.md
05_installing_a_library/src/: main.cpp
05_installing_a_library/src/my_lib/: CMakeLists.txt
05_installing_a_library/src/my_lib/src/: SharedBuffer.cpp
06_using_installed_library/: README.md
06_using_installed_library/src/: CMakeLists.txt
07_GoogleTest_tutorial/: CMakeLists.txt  README.md
